--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "net": "^1.0.2",
+    "sockjs-client": "^1.6.0",
+    "stomp-websocket": "^2.3.4-next",
+    "stompjs": "^2.3.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
